fixing footer alignment

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -622,4 +622,5 @@ pre tt:after {
 }
 footer {
   font-size: 0.8em;
+  margin-left: 10%;
 }
